deploy: c8774554fb35cc105a58f6fd89f0c090d3b90ef7

--- a/geometry/convexhull.html
+++ b/geometry/convexhull.html
@@ -154,7 +154,7 @@ It's implemented based on monotone chain algorithm, a much intuitive and straigh
 <p>The result is sorted in clockwise direction.</p>
 <p>If the input includes duplicates and those happen to be on the convex hull, then only one of them is included in the result.</p>
 <h2 id="code"><a class="header" href="#code">Code</a></h2>
-<pre><code class="language-rust noplayground">type Point = (i64, i64);
+<pre><code class="language-rust noplayground">type Point = [i64; 2];
 
 /// Returns a convex hull of `arr`.
 /// If `COLINEAR` is set to `false`, then every point which lies on a vertex of a convex hull, but not at the endpoints of it, is excluded.
@@ -163,43 +163,43 @@ It's implemented based on monotone chain algorithm, a much intuitive and straigh
 ///
 /// The implementation utilizes monotone-chain convex hull algorithm.
 fn convex_hull&lt;const COLINEAR: bool&gt;(arr: &amp;[Point]) -&gt; Vec&lt;Point&gt; {
-    let mut arr = arr.to_owned();
-    arr.sort_unstable();
-    arr.dedup();
-    if arr.len() &lt;= 1 {
-        return arr.to_vec();
-    }
-    let mut ret = vec![];
+	let mut arr = arr.to_owned();
+	arr.sort_unstable();
+	arr.dedup();
+	if arr.len() &lt;= 1 {
+		return arr.to_vec();
+	}
+	let mut ret = vec![];
 
-    fn monotone&lt;const COLINEAR: bool&gt;(it: impl Iterator&lt;Item = Point&gt;) -&gt; Vec&lt;Point&gt; {
-        let sub = |(a, b): Point, (c, d): Point| (a - c, b - d);
-        let cross = |(a, b): Point, (c, d): Point| a as i128 * d as i128 - b as i128 * c as i128;
-        let ccw = |a: Point, b: Point, c: Point| cross(sub(b, a), sub(c, b));
-        let mut dl = vec![];
-        for p in it {
-            while dl.len() &gt;= 2 {
-                let n = dl.len();
-                let v = ccw(dl[n - 2], dl[n - 1], p);
-                if v &gt; 0 || (!COLINEAR &amp;&amp; v == 0) {
-                    dl.pop();
-                } else {
-                    break;
-                }
-            }
-            dl.push(p);
-        }
-        dl
-    }
+	fn monotone&lt;const COLINEAR: bool&gt;(it: impl Iterator&lt;Item = Point&gt;) -&gt; Vec&lt;Point&gt; {
+		let sub = |[a, b]: Point, [c, d]: Point| [a - c, b - d];
+		let cross = |[a, b]: Point, [c, d]: Point| a as i128 * d as i128 - b as i128 * c as i128;
+		let ccw = |a: Point, b: Point, c: Point| cross(sub(b, a), sub(c, b));
+		let mut dl = vec![];
+		for p in it {
+			while dl.len() &gt;= 2 {
+				let n = dl.len();
+				let v = ccw(dl[n - 2], dl[n - 1], p);
+				if v &gt; 0 || (!COLINEAR &amp;&amp; v == 0) {
+					dl.pop();
+				} else {
+					break;
+				}
+			}
+			dl.push(p);
+		}
+		dl
+	}
 
-    ret.extend(monotone::&lt;COLINEAR&gt;(arr.iter().copied()));
-    ret.pop();
-    ret.extend(monotone::&lt;COLINEAR&gt;(arr.iter().copied().rev()));
-    ret.pop();
+	ret.extend(monotone::&lt;COLINEAR&gt;(arr.iter().copied()));
+	ret.pop();
+	ret.extend(monotone::&lt;COLINEAR&gt;(arr.iter().copied().rev()));
+	ret.pop();
 
-    ret
+	ret
 }</code></pre>
 <hr />
-<p>Last modified on 231008.</p>
+<p>Last modified on 231024.</p>
 
                     </main>
 
