--- a/geometry/line_intersection.html
+++ b/geometry/line_intersection.html
@@ -149,7 +149,7 @@
                     <main>
                         <h1 id="line-intersection"><a class="header" href="#line-intersection">Line Intersection</a></h1>
 <h2 id="code"><a class="header" href="#code">Code</a></h2>
-<pre><code class="language-rust noplayground">type Point = [i64; 2];
+<pre><code class="language-rust noplayground">type Point = [i32; 2];
 type Line = [Point; 2];
 type Frac = [i128; 2];
 
@@ -164,29 +164,30 @@ fn cross(a: Point, b: Point) -&gt; i128 { a[0] as i128 * b[1] as i128 - a[1] as 
 /// Returns `Some(Err([x, y]))` if `p` and `q` overlaps at a line segment.
 /// Here, `x` and `y` represent both ends of the segment.
 fn intersect(p: Line, q: Line) -&gt; Option&lt;Result&lt;[Frac; 2], Line&gt;&gt; {
+	use std::cmp::Ordering::*;
 	let u = cross(sub(p[1], p[0]), sub(q[1], q[0]));
+	let sn = cross(sub(q[0], p[0]), sub(q[1], q[0]));
+	let tn = cross(sub(q[0], p[0]), sub(p[1], p[0]));
 	if u != 0 {
-		let sn = cross(sub(q[0], p[0]), sub(q[1], q[0]));
-		let tn = cross(sub(q[0], p[0]), sub(p[1], p[0]));
 		if ((0..=u).contains(&amp;sn) || (u..=0).contains(&amp;sn)) &amp;&amp; ((0..=u).contains(&amp;tn) || (u..=0).contains(&amp;tn)) {
-			let (s, t) = (sn, u - sn);
+			let (s, r) = (sn, u - sn);
 			let [g, h] = p.map(|f| f.map(|x| x as i128));
-			let [x, y] = [0, 1].map(|i| [t * g[i] + s * h[i], u]);
+			let [x, y] = [0, 1].map(|i| [r * g[i] + s * h[i], u]);
 			Some(Ok([x, y]))
 		} else {
 			None
 		}
 	} else {
-		if cross(sub(p[0], p[1]), sub(q[0], p[1])) != 0 || cross(sub(p[1], p[0]), sub(q[1], p[1])) != 0 {
+		if sn != 0 || tn != 0 {
 			return None;
 		}
 		let (a0, a1) = (p[0].min(p[1]), p[0].max(p[1]));
 		let (b0, b1) = (q[0].min(q[1]), q[0].max(q[1]));
 		let (l, r) = (a0.max(b0), a1.min(b1));
 		match l.cmp(&amp;r) {
-			Ordering::Less =&gt; Some(Err([l, r])),
-			Ordering::Equal =&gt; Some(Ok([[l[0] as i128, 1], [l[1] as i128, 1]])),
-			Ordering::Greater =&gt; None,
+			Less =&gt; Some(Err([l, r])),
+			Equal =&gt; Some(Ok(l.map(|x| [x.into(), 1]))),
+			Greater =&gt; None,
 		}
 	}
 }</code></pre>
