--- a/math/linrec/bostanmori.html
+++ b/math/linrec/bostanmori.html
@@ -149,148 +149,113 @@
                     <main>
                         <h1 id="bostan-mori"><a class="header" href="#bostan-mori">Bostan-Mori</a></h1>
 <p>Reference - <a href="https://hal.inria.fr/hal-02917827v2/document">Alin Bostan, Ryuhei Mori. A Simple and Fast Algorithm for Computing the N-th Term of a Linearly Recurrent Sequence. SOSA’21 (SIAM Symposium on Simplicity in Algorithms), Jan 2021, Alexandria, United States. ffhal-02917827v2f</a></p>
-<h2 id="calculating-one-value-of-the-sequence"><a class="header" href="#calculating-one-value-of-the-sequence">Calculating one value of the sequence</a></h2>
-<h3 id="naive-multiplication-under-prime-modulo"><a class="header" href="#naive-multiplication-under-prime-modulo">Naive multiplication, under prime modulo</a></h3>
-<pre><code class="language-rust noplayground">/// Returns g, s, t s.t. g=gcd(a,b) and as+bt=r
-#[inline(always)]
-fn ext_gcd(a: i64, b: i64) -&gt; (i64, i64, i64) {
-    let (mut s, mut old_s) = (0, 1);
-    let (mut r, mut old_r) = (b, a);
-    while r != 0 {
-        let q = old_r / r;
-
-        let new_r = old_r - q * r;
-        old_r = r;
-        r = new_r;
-
-        let new_s = old_s - q * s;
-        old_s = s;
-        s = new_s;
-    }
-
-    (
-        old_r,
-        old_s,
-        if b != 0 { (old_r - old_s * a) / b } else { 0 },
-    )
+<p>Given \(k\) initial values \(c_0,\ c_1,\ \cdots,\ c_{k-1}\) and a linear recurrence of length \(k\):
+\[ f_{n+k} = c_0f_n + c_1f_{n+1} + \cdots + c_{k-1}f_{n+k-1} \]
+<code>bostan_mori::&lt;P&gt;(c, f, n)</code> calculates \(f_n \bmod P\). Here, \(P\) can be any integer larger than \(1\).</p>
+<p>The time complexity of this algorithm is \(O(\mathrm{M}(k) \log n)\) where \(\mathrm{M}(k)\) represents the time complexity for polynomial multiplication.
+This depends on the implementation of <code>poly_mul</code>. In the provided snippet, naive polynomial multiplication is used, resulting in a time complexity of \(O(k^2 \log n)\).
+However, by replacing it with an implementation using FFT, the time complexity can be improved to \(O(k \log k \log n)\).</p>
+<h2 id="example"><a class="header" href="#example">Example</a></h2>
+<p>This example calculates terms of \({f_n}\) for \(0 \le n \le 10\) where \(f_0 = 0\), \(f_1 = 1\), and \(f_{n+2} = 2f_n + f_{n+1}\).</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
+</span>for i in 0..=10 {
+    println!(&quot;{}&quot;, bostan_mori::&lt;12345&gt;(&amp;[2, 1], &amp;[0, 1], i));
 }
-
-fn mod_inv(a: u64, m: u64) -&gt; u64 {
-    let (_, mut x, _) = ext_gcd((a % m) as i64, m as i64);
-    if x &lt; 0 {
-        x += m as i64;
-    }
-    x as u64 % m
-}
-
-/// f = f[0] + f[1]x + f[2]x2 + ...
-#[inline(always)]
-fn poly_mul(f: &amp;[u64], g: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
-    let mut h: Vec&lt;u64&gt; = vec![0; f.len() + g.len() - 1];
-    for (i, &amp;u) in f.iter().enumerate() {
-        // u*x**i
-        for (j, &amp;v) in g.iter().enumerate() {
-            // v*x**j
-            h[i + j] += u * v;
-            h[i + j] %= m;
-        }
-    }
-    while let Some(&amp;v) = h.last() {
-        if v != 0 {
-            break;
-        }
-        h.pop();
-    }
-    h
-}
-
-#[inline(always)]
-fn poly_mul_even_order(f: &amp;[u64], g: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
-    let mut h: Vec&lt;u64&gt; = vec![0; (f.len() + g.len()) / 2 + 2];
-    for (i, &amp;u) in f.iter().enumerate() {
-        if i &amp; 1 == 0 {
-            for (j, &amp;v) in g.iter().enumerate().step_by(2) {
-                h[(i + j) &gt;&gt; 1] += u * v;
-                h[(i + j) &gt;&gt; 1] %= m;
-            }
-        } else {
-            for (j, &amp;v) in g.iter().enumerate().skip(1).step_by(2) {
-                h[(i + j) &gt;&gt; 1] += u * v;
-                h[(i + j) &gt;&gt; 1] %= m;
-            }
-        }
-    }
-    while let Some(&amp;v) = h.last() {
-        if v != 0 {
-            break;
-        }
-        h.pop();
-    }
-    h
-}
-
-#[inline(always)]
-fn poly_mul_odd_order(f: &amp;[u64], g: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
-    let mut h: Vec&lt;u64&gt; = vec![0; (f.len() + g.len()) / 2 + 2];
-    for (i, &amp;u) in f.iter().enumerate() {
-        if i &amp; 1 != 0 {
-            for (j, &amp;v) in g.iter().enumerate().step_by(2) {
-                h[(i + j) &gt;&gt; 1] += u * v;
-                h[(i + j) &gt;&gt; 1] %= m;
-            }
-        } else {
-            for (j, &amp;v) in g.iter().enumerate().skip(1).step_by(2) {
-                h[(i + j) &gt;&gt; 1] += u * v;
-                h[(i + j) &gt;&gt; 1] %= m;
-            }
-        }
-    }
-    while let Some(&amp;v) = h.last() {
-        if v != 0 {
-            break;
-        }
-        h.pop();
-    }
-    h
-}
-
-/// f(x) -&gt; f(-x)
-#[inline(always)]
-fn get_neg_x(f: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
-    f.iter()
-        .enumerate()
-        .map(|(i, &amp;v)| if i &amp; 1 == 0 { v } else { m - v })
-        .collect()
-}
-
-/// Finds arr[n] where
+<span class="boring">}
+</span><span class="boring">
+</span><span class="boring">/// Finds arr[n] where
+</span><span class="boring">/// arr[n+d] = rec[0]arr[n] + rec[1]arr[n+1] + rec[2]arr[n+2] + rec[3]arr[n+3] + ... + rec[d-1]arr[n+d-1]
+</span><span class="boring">/// under mod P where d=rec.len()=arr.len()
+</span><span class="boring">fn bostan_mori&lt;const P: u64&gt;(rec: &amp;[u64], vals: &amp;[u64], mut n: u64) -&gt; u64 {
+</span><span class="boring">    if vals.len() as u64 &gt; n {
+</span><span class="boring">        return vals[n as usize];
+</span><span class="boring">    }
+</span><span class="boring">
+</span><span class="boring">    let x = (0..rec.len()).find(|&amp;i| rec[i] != 0).unwrap_or(rec.len());
+</span><span class="boring">    if x == rec.len() {
+</span><span class="boring">        return 0;
+</span><span class="boring">    }
+</span><span class="boring">
+</span><span class="boring">    let vals: Vec&lt;u64&gt; = vals.iter().map(|&amp;v| v % P).collect();
+</span><span class="boring">    let rec: Vec&lt;u64&gt; = rec.iter().map(|&amp;v| v % P).collect();
+</span><span class="boring">    let mut q = vec![1];
+</span><span class="boring">    q.extend(rec.iter().rev().map(|&amp;v| (P - v) % P));
+</span><span class="boring">    let mut p = poly_mul::&lt;P&gt;(&amp;vals, &amp;q);
+</span><span class="boring">    p.truncate(rec.len());
+</span><span class="boring">
+</span><span class="boring">    while n &gt;= 1 {
+</span><span class="boring">        let mq: Vec&lt;_&gt; = q
+</span><span class="boring">            .iter()
+</span><span class="boring">            .enumerate()
+</span><span class="boring">            .map(|(i, &amp;v)| if i % 2 == 0 { v } else { (P - v) % P })
+</span><span class="boring">            .collect();
+</span><span class="boring">        let u = poly_mul::&lt;P&gt;(&amp;p, &amp;mq);
+</span><span class="boring">        p = u
+</span><span class="boring">            .iter()
+</span><span class="boring">            .copied()
+</span><span class="boring">            .skip((n % 2) as usize)
+</span><span class="boring">            .step_by(2)
+</span><span class="boring">            .collect();
+</span><span class="boring">        let a = poly_mul::&lt;P&gt;(&amp;q, &amp;mq);
+</span><span class="boring">        q = a.iter().copied().step_by(2).collect();
+</span><span class="boring">        n /= 2;
+</span><span class="boring">    }
+</span><span class="boring">
+</span><span class="boring">    p[0] % P
+</span><span class="boring">}
+</span><span class="boring">
+</span><span class="boring">fn poly_mul&lt;const P: u64&gt;(a: &amp;[u64], b: &amp;[u64]) -&gt; Vec&lt;u64&gt; {
+</span><span class="boring">    let mut ret = vec![0; a.len() + b.len() - 1];
+</span><span class="boring">    for (i, &amp;av) in a.iter().enumerate() {
+</span><span class="boring">        for (j, &amp;bv) in b.iter().enumerate() {
+</span><span class="boring">            ret[i + j] = (ret[i + j] + av * bv) % P;
+</span><span class="boring">        }
+</span><span class="boring">    }
+</span><span class="boring">    ret
+</span><span class="boring">}
+</span><span class="boring"></span></code></pre></pre>
+<h2 id="snippet"><a class="header" href="#snippet">Snippet</a></h2>
+<pre><code class="language-rust noplayground">/// Finds arr[n] where
 /// arr[n+d] = rec[0]arr[n] + rec[1]arr[n+1] + rec[2]arr[n+2] + rec[3]arr[n+3] + ... + rec[d-1]arr[n+d-1]
-/// under modulo m where d=rec.len()=arr.len()
-fn bostan_mori(rec: &amp;[u64], vals: &amp;[u64], n: u64, m: u64) -&gt; u64 {
-    if vals.len() as u64 &gt; n {
-        return vals[n as usize];
-    }
-    let d = rec.len();
+/// under mod P where d=rec.len()=arr.len()
+fn bostan_mori&lt;const P: u64&gt;(rec: &amp;[u64], vals: &amp;[u64], mut n: u64) -&gt; u64 {
+	if vals.len() as u64 &gt; n {
+		return vals[n as usize];
+	}
 
-    let mut q: Vec&lt;u64&gt; = Vec::with_capacity(d + 1);
-    q.push(1);
-    q.extend(rec.iter().map(|&amp;v| m - v).rev());
+	let x = (0..rec.len()).find(|&amp;i| rec[i] != 0).unwrap_or(rec.len());
+	if x == rec.len() {
+		return 0;
+	}
 
-    let mut p = poly_mul(vals, &amp;q, m);
-    p.truncate(d);
+	let vals: Vec&lt;u64&gt; = vals.iter().map(|&amp;v| v % P).collect();
+	let rec: Vec&lt;u64&gt; = rec.iter().map(|&amp;v| v % P).collect();
+	let mut q = vec![1];
+	q.extend(rec.iter().rev().map(|&amp;v| (P - v) % P));
+	let mut p = poly_mul::&lt;P&gt;(&amp;vals, &amp;q);
+	p.truncate(rec.len());
 
-    let mut n = n;
-    while n &gt;= 1 {
-        let mq = get_neg_x(&amp;q, m);
-        if n &amp; 1 == 0 {
-            p = poly_mul_even_order(&amp;p, &amp;mq, m);
-        } else {
-            p = poly_mul_odd_order(&amp;p, &amp;mq, m);
-        }
-        q = poly_mul_even_order(&amp;q, &amp;mq, m);
-        n &gt;&gt;= 1;
-    }
-    p[0] * mod_inv(q[0], m) // Requires GCD(q[0], m) = 1, it's safe to have m as a prime
+	while n &gt;= 1 {
+		let mq: Vec&lt;_&gt; = q.iter().enumerate().map(|(i, &amp;v)| if i % 2 == 0 { v } else { (P - v) % P }).collect();
+		let u = poly_mul::&lt;P&gt;(&amp;p, &amp;mq);
+		p = u.iter().copied().skip((n % 2) as usize).step_by(2).collect();
+		let a = poly_mul::&lt;P&gt;(&amp;q, &amp;mq);
+		q = a.iter().copied().step_by(2).collect();
+		n /= 2;
+	}
+
+	p[0] % P
+}
+
+/// Naive O(k^2) multiplication
+fn poly_mul&lt;const P: u64&gt;(a: &amp;[u64], b: &amp;[u64]) -&gt; Vec&lt;u64&gt; {
+	let mut ret = vec![0; a.len() + b.len() - 1];
+	for (i, &amp;av) in a.iter().enumerate() {
+		for (j, &amp;bv) in b.iter().enumerate() {
+			ret[i + j] = (ret[i + j] + av * bv) % P;
+		}
+	}
+	ret
 }</code></pre>
 
                     </main>
