--- a/print.html
+++ b/print.html
@@ -202,10 +202,10 @@ OTHER DEALINGS IN THE SOFTWARE.</p>
 <p>For more information, please refer to <a href="http://unlicense.org/">http://unlicense.org/</a></p>
 </blockquote>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="sieve"><a class="header" href="#sieve">Sieve</a></h1>
-<p>Sieve algorithms find all prime numbers below a specified integer. Additionally, they are efficient in computing values of multiplicative functions for all integers up to that specified limit.</p>
+<p>Sieve algorithms find all prime numbers below a specified integer. Additionally, they efficiently compute values of multiplicative functions for all integers up to that specified limit.</p>
 <h2 id="finding-primes"><a class="header" href="#finding-primes">Finding primes</a></h2>
 <p><code>sieve</code> returns a vector containing all prime numbers that are less than or equal to <code>max_val</code>.</p>
-<p>It runs with a time complexity of \(O(N)\) where \(N\) is the value of <code>max_val</code>. This efficiency is achieved by using linear sieve.
+<p>This function runs with a time complexity of \(O(N)\) where \(N\) is the value of <code>max_val</code>. This efficiency is achieved with linear sieve.
 This function is further optimized by excluding multiples of \(2\) and \(3\) in advance.</p>
 <pre><code class="language-rust noplayground">fn sieve(max_val: usize) -&gt; Vec&lt;usize&gt; {
 	let mut primes = vec![2, 3];
@@ -1627,8 +1627,8 @@ fn kitamasa(rec: &amp;[u64], vals: &amp;[u64], mut n: u64, m: u64) -&gt; u64 {
 \[ f_{n+k} = c_0f_n + c_1f_{n+1} + \cdots + c_{k-1}f_{n+k-1} \]
 <code>bostan_mori::&lt;P&gt;(c, f, n)</code> calculates \(f_n \bmod P\). Here, \(P\) can be any integer larger than \(1\).</p>
 <p>The time complexity of this algorithm is \(O(\mathrm{M}(k) \log n)\) where \(\mathrm{M}(k)\) represents the time complexity for polynomial multiplication.
-This depends on the implementation of <code>poly_mul</code>. In the provided snippet, naive polynomial multiplication is used, resulting in a time complexity of \(O(k^2 \log n)\).
-However, by replacing it with an implementation using FFT, the time complexity can be improved to \(O(k \log k \log n)\).</p>
+This depends on the implementation of <code>poly_mul</code>. In this snippet, naive polynomial multiplication is used, resulting in a time complexity of \(O(k^2 \log n)\).
+By replacing it with an implementation using FFT, the time complexity can be improved to \(O(k \log k \log n)\).</p>
 <h2 id="example-8"><a class="header" href="#example-8">Example</a></h2>
 <p>This example calculates terms of \({f_n}\) for \(0 \le n \le 10\) where \(f_0 = 0\), \(f_1 = 1\), and \(f_{n+2} = 2f_n + f_{n+1}\).</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
