deploy: 373671f3ea3e7cfaad940a899ee6c68aeada550a

--- a/geometry/line_intersection.html
+++ b/geometry/line_intersection.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Math</li><li class="chapter-item expanded "><a href="../math/sieve.html"><strong aria-hidden="true">1.</strong> Sieve</a></li><li class="chapter-item expanded "><a href="../math/gcd.html"><strong aria-hidden="true">2.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../math/extgcd.html"><strong aria-hidden="true">3.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../math/crt.html"><strong aria-hidden="true">4.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../math/millerrabin.html"><strong aria-hidden="true">5.</strong> Deterministic Miller-Rabin Primality Test</a></li><li class="chapter-item expanded "><a href="../math/pollardrho.html"><strong aria-hidden="true">6.</strong> Pollard's Rho Algorithm</a></li><li class="chapter-item expanded "><a href="../math/ntt.html"><strong aria-hidden="true">7.</strong> Number Theoretic Transform</a></li><li class="chapter-item expanded "><a href="../math/linrec/intro.html"><strong aria-hidden="true">8.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../math/linrec/berlekamp.html"><strong aria-hidden="true">8.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="../math/linrec/kitamasa.html"><strong aria-hidden="true">8.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="../math/linrec/bostanmori.html"><strong aria-hidden="true">8.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><a href="../math/isqrt.html"><strong aria-hidden="true">9.</strong> Integer Square Root</a></li><li class="chapter-item expanded affix "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../datastructure/dsu.html"><strong aria-hidden="true">10.</strong> Disjoint Set Union</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/wdsu.html"><strong aria-hidden="true">10.1.</strong> Weighted DSU</a></li></ol></li><li class="chapter-item expanded "><a href="../datastructure/segtree/intro.html"><strong aria-hidden="true">11.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/segtree/segtree.html"><strong aria-hidden="true">11.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/fenwick.html"><strong aria-hidden="true">11.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">11.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><a href="../datastructure/rope.html"><strong aria-hidden="true">12.</strong> Rope</a></li><li class="chapter-item expanded "><a href="../datastructure/bitarray.html"><strong aria-hidden="true">13.</strong> Bitset</a></li><li class="chapter-item expanded affix "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../graphs/dijkstra.html"><strong aria-hidden="true">14.</strong> Dijkstra</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../graphs/dial.html"><strong aria-hidden="true">14.1.</strong> Dial</a></li></ol></li><li class="chapter-item expanded "><a href="../graphs/scc.html"><strong aria-hidden="true">15.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../graphs/2sat.html"><strong aria-hidden="true">16.</strong> 2-SAT</a></li><li class="chapter-item expanded "><a href="../graphs/flow/intro.html"><strong aria-hidden="true">17.</strong> Flow</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../graphs/flow/dinic.html"><strong aria-hidden="true">17.1.</strong> Dinic's Algorithm</a></li><li class="chapter-item expanded "><a href="../graphs/flow/mcmf.html"><strong aria-hidden="true">17.2.</strong> MCMF</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Strings</li><li class="chapter-item expanded "><a href="../strings/kmp.html"><strong aria-hidden="true">18.</strong> KMP</a></li><li class="chapter-item expanded "><a href="../strings/manacher.html"><strong aria-hidden="true">19.</strong> Manacher</a></li><li class="chapter-item expanded "><a href="../strings/salcp.html"><strong aria-hidden="true">20.</strong> Suffix Array and LCP Array</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="../geometry/convexhull.html"><strong aria-hidden="true">21.</strong> Convex Hull</a></li><li class="chapter-item expanded "><a href="../geometry/line_intersection.html" class="active"><strong aria-hidden="true">22.</strong> Line Intersection</a></li><li class="chapter-item expanded "><a href="../geometry/inside_polygon.html"><strong aria-hidden="true">23.</strong> Point in a Polygon</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../unclass/valcomp.html"><strong aria-hidden="true">24.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="../unclass/lis.html"><strong aria-hidden="true">25.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded "><a href="../unclass/mos.html"><strong aria-hidden="true">26.</strong> Mo's</a></li><li class="chapter-item expanded "><a href="../unclass/bigint.html"><strong aria-hidden="true">27.</strong> Arbitrary-Precision Integer</a></li><li class="chapter-item expanded "><a href="../unclass/fraction.html"><strong aria-hidden="true">28.</strong> Fraction</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../misc/fastio.html"><strong aria-hidden="true">29.</strong> Fast IO</a></li><li class="chapter-item expanded "><a href="../misc/itertools.html"><strong aria-hidden="true">30.</strong> Iterator Tools</a></li><li class="chapter-item expanded "><a href="../misc/macro.html"><strong aria-hidden="true">31.</strong> Macros</a></li><li class="chapter-item expanded affix "><li class="part-title">Deprecated</li><li class="chapter-item expanded "><a href="../zdeprecated/adjlist.html"><strong aria-hidden="true">32.</strong> Adjacency List Graph Representation</a></li><li class="chapter-item expanded "><a href="../zdeprecated/zero_one_trait.html"><strong aria-hidden="true">33.</strong> Zero/One Trait</a></li><li class="chapter-item expanded "><a href="../zdeprecated/deprecated_macros.html"><strong aria-hidden="true">34.</strong> Deprecated Macros</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Math</li><li class="chapter-item expanded "><a href="../math/sieve.html"><strong aria-hidden="true">1.</strong> Sieve</a></li><li class="chapter-item expanded "><a href="../math/gcd.html"><strong aria-hidden="true">2.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../math/extgcd.html"><strong aria-hidden="true">3.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../math/crt.html"><strong aria-hidden="true">4.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../math/millerrabin.html"><strong aria-hidden="true">5.</strong> Deterministic Miller-Rabin Primality Test</a></li><li class="chapter-item expanded "><a href="../math/pollardrho.html"><strong aria-hidden="true">6.</strong> Pollard's Rho Algorithm</a></li><li class="chapter-item expanded "><a href="../math/ntt.html"><strong aria-hidden="true">7.</strong> Number Theoretic Transform</a></li><li class="chapter-item expanded "><a href="../math/linrec/intro.html"><strong aria-hidden="true">8.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../math/linrec/berlekamp.html"><strong aria-hidden="true">8.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="../math/linrec/kitamasa.html"><strong aria-hidden="true">8.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="../math/linrec/bostanmori.html"><strong aria-hidden="true">8.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><a href="../math/isqrt.html"><strong aria-hidden="true">9.</strong> Integer Square Root</a></li><li class="chapter-item expanded affix "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../datastructure/dsu.html"><strong aria-hidden="true">10.</strong> Disjoint Set Union</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/wdsu.html"><strong aria-hidden="true">10.1.</strong> Weighted DSU</a></li></ol></li><li class="chapter-item expanded "><a href="../datastructure/segtree/intro.html"><strong aria-hidden="true">11.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/segtree/segtree.html"><strong aria-hidden="true">11.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/fenwick.html"><strong aria-hidden="true">11.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">11.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><a href="../datastructure/rope.html"><strong aria-hidden="true">12.</strong> Rope</a></li><li class="chapter-item expanded "><a href="../datastructure/bitarray.html"><strong aria-hidden="true">13.</strong> Bitset</a></li><li class="chapter-item expanded affix "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../graphs/dijkstra.html"><strong aria-hidden="true">14.</strong> Dijkstra</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../graphs/dial.html"><strong aria-hidden="true">14.1.</strong> Dial</a></li></ol></li><li class="chapter-item expanded "><a href="../graphs/scc.html"><strong aria-hidden="true">15.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../graphs/2sat.html"><strong aria-hidden="true">16.</strong> 2-SAT</a></li><li class="chapter-item expanded "><a href="../graphs/hld.html"><strong aria-hidden="true">17.</strong> Heavy-Light Decomposition</a></li><li class="chapter-item expanded "><a href="../graphs/flow/intro.html"><strong aria-hidden="true">18.</strong> Flow</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../graphs/flow/dinic.html"><strong aria-hidden="true">18.1.</strong> Dinic's Algorithm</a></li><li class="chapter-item expanded "><a href="../graphs/flow/mcmf.html"><strong aria-hidden="true">18.2.</strong> MCMF</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Strings</li><li class="chapter-item expanded "><a href="../strings/kmp.html"><strong aria-hidden="true">19.</strong> KMP</a></li><li class="chapter-item expanded "><a href="../strings/manacher.html"><strong aria-hidden="true">20.</strong> Manacher</a></li><li class="chapter-item expanded "><a href="../strings/salcp.html"><strong aria-hidden="true">21.</strong> Suffix Array and LCP Array</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="../geometry/2dgeometrybase.html"><strong aria-hidden="true">22.</strong> 2D Geometry Base</a></li><li class="chapter-item expanded "><a href="../geometry/anglesort.html"><strong aria-hidden="true">23.</strong> Angle Comparator</a></li><li class="chapter-item expanded "><a href="../geometry/convexhull.html"><strong aria-hidden="true">24.</strong> Convex Hull</a></li><li class="chapter-item expanded "><a href="../geometry/line_intersection.html" class="active"><strong aria-hidden="true">25.</strong> Line Intersection</a></li><li class="chapter-item expanded "><a href="../geometry/closest_points.html"><strong aria-hidden="true">26.</strong> Closest Points</a></li><li class="chapter-item expanded "><a href="../geometry/farthest_points.html"><strong aria-hidden="true">27.</strong> Farthest Points</a></li><li class="chapter-item expanded "><a href="../geometry/inside_polygon.html"><strong aria-hidden="true">28.</strong> Point in a Polygon</a></li><li class="chapter-item expanded "><a href="../geometry/inside_convex_polygon.html"><strong aria-hidden="true">29.</strong> Point in a Convex Polygon</a></li><li class="chapter-item expanded "><a href="../geometry/convexmincowski.html"><strong aria-hidden="true">30.</strong> Mincowski Sum of Convex Polygons</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../unclass/valcomp.html"><strong aria-hidden="true">31.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="../unclass/lis.html"><strong aria-hidden="true">32.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded "><a href="../unclass/mos.html"><strong aria-hidden="true">33.</strong> Mo's</a></li><li class="chapter-item expanded "><a href="../unclass/bigint.html"><strong aria-hidden="true">34.</strong> Arbitrary-Precision Integer</a></li><li class="chapter-item expanded "><a href="../unclass/fraction.html"><strong aria-hidden="true">35.</strong> Fraction</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../misc/fastio.html"><strong aria-hidden="true">36.</strong> Fast IO</a></li><li class="chapter-item expanded "><a href="../misc/itertools.html"><strong aria-hidden="true">37.</strong> Iterator Tools</a></li><li class="chapter-item expanded "><a href="../misc/macro.html"><strong aria-hidden="true">38.</strong> Macros</a></li><li class="chapter-item expanded affix "><li class="part-title">Deprecated</li><li class="chapter-item expanded "><a href="../zdeprecated/adjlist.html"><strong aria-hidden="true">39.</strong> Adjacency List Graph Representation</a></li><li class="chapter-item expanded "><a href="../zdeprecated/zero_one_trait.html"><strong aria-hidden="true">40.</strong> Zero/One Trait</a></li><li class="chapter-item expanded "><a href="../zdeprecated/deprecated_macros.html"><strong aria-hidden="true">41.</strong> Deprecated Macros</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -149,21 +149,13 @@
                     <main>
                         <h1 id="line-intersection"><a class="header" href="#line-intersection">Line Intersection</a></h1>
 <h2 id="code"><a class="header" href="#code">Code</a></h2>
-<pre><code class="language-rust noplayground">type I = i32;
-type P = [I; 2];
-type L = [P; 2];
-type Frac = [i128; 2];
-
-fn sub(a: P, b: P) -&gt; P { [a[0] - b[0], a[1] - b[1]] }
-fn cross(a: P, b: P) -&gt; i128 { a[0] as i128 * b[1] as i128 - a[1] as i128 * b[0] as i128 }
-
-/// Returns `None` if `p` and `q` don't meet.
+<pre><code class="language-rust noplayground">type Frac = [i128; 2];
+/// Calculates the intersection of line segments `p` and `q`.
+/// Returns `None` for no intersection.
+/// Returns `Some(Ok([x, y]))` for a point intersection, where `[x, y]` is a fraction (`[numerator, denominator]`).
+/// Returns `Some(Err([x, y]))` for an overlapping line segment, where `[x, y]` represents endpoints of the overlap.
 ///
-/// Returns `Some(Ok([x, y]))` if `p` and `q` meet in a single point `(x, y)`.
-/// Here, `x` and `y` have a type of `[i128; 2]` which indicates a fraction, where its first element is a numerator and the second element is a denominator.
-///
-/// Returns `Some(Err([x, y]))` if `p` and `q` overlaps at a line segment.
-/// Here, `x` and `y` represent both ends of the segment.
+/// Note: Potential overflow for `i64` or `i128`; intended for use with `i32`.
 fn intersect(p: L, q: L) -&gt; Option&lt;Result&lt;[Frac; 2], L&gt;&gt; {
 	use std::cmp::Ordering::*;
 	let u = cross(sub(p[1], p[0]), sub(q[1], q[0]));
@@ -172,9 +164,9 @@ fn intersect(p: L, q: L) -&gt; Option&lt;Result&lt;[Frac; 2], L&gt;&gt; {
 	if u != 0 {
 		let int = if u &gt;= 0 { 0..=u } else { u..=0 };
 		if int.contains(&amp;sn) &amp;&amp; int.contains(&amp;tn) {
-			let (s, r) = (sn, u - sn);
+			let [s, r] = [sn, u - sn].map(|x| x as i128);
 			let [g, h] = p.map(|f| f.map(|x| x as i128));
-			let [x, y] = [0, 1].map(|i| [r * g[i] + s * h[i], u]);
+			let [x, y] = [0, 1].map(|i| [r * g[i] + s * h[i], u as i128]);
 			Some(Ok([x, y]))
 		} else {
 			None
@@ -193,8 +185,49 @@ fn intersect(p: L, q: L) -&gt; Option&lt;Result&lt;[Frac; 2], L&gt;&gt; {
 		}
 	}
 }</code></pre>
+<p>The code below only checks if two lines meet, without calculating where they meet.</p>
+<pre><code class="language-rust noplayground">/// Returns the two farthest points from `p`, or `None` if `p` is empty.
+fn farthest_points(p: &amp;[P]) -&gt; Option&lt;[P; 2]&gt; {
+	let dist = |a: P, b: P| dot(sub(a, b), sub(a, b));
+
+	let cvh = convex_hull::&lt;false&gt;(p);
+	if cvh.len() == 1 {
+		return Some([cvh[0], cvh[0]]);
+	} else if cvh.len() == 2 {
+		return Some([cvh[0], cvh[1]]);
+	}
+
+	fn line_iterator(poly: &amp;[P]) -&gt; impl Iterator&lt;Item = [P; 2]&gt; + '_ {
+		let mut it = poly.iter().copied().cycle().peekable();
+		iter::from_fn(move || {
+			let u = it.next().unwrap();
+			let v = *it.peek().unwrap();
+			Some([u, v])
+		})
+	}
+
+	let mut r = line_iterator(&amp;cvh).skip(1).peekable();
+	let mut rec = None;
+	for [la, lb] in line_iterator(&amp;cvh).take(cvh.len()) {
+		let lv = sub(lb, la);
+		while {
+			let &amp;[ra, rb] = r.peek().unwrap();
+			cross(lv, sub(rb, ra)) &gt; 0
+		} {
+			r.next();
+		}
+		let &amp;[ra, _] = r.peek().unwrap();
+		let ch = [la, ra];
+		let d = dist(ch[0], ch[1]);
+		if rec.map_or(true, |(x, _)| x &lt; d) {
+			rec = Some((d, ch));
+		}
+	}
+
+	rec.map(|x| x.1)
+}</code></pre>
 <hr />
-<p>Last modified on 231203.</p>
+<p>Last modified on 231225.</p>
 
                     </main>
 
@@ -204,7 +237,7 @@ fn intersect(p: L, q: L) -&gt; Option&lt;Result&lt;[Frac; 2], L&gt;&gt; {
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../geometry/inside_polygon.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../geometry/closest_points.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -218,7 +251,7 @@ fn intersect(p: L, q: L) -&gt; Option&lt;Result&lt;[Frac; 2], L&gt;&gt; {
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../geometry/inside_polygon.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../geometry/closest_points.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
